[gd_scene load_steps=7 format=2]

[ext_resource path="res://objects/door/scripts/door.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 28, 108 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 104, 108 )

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Colision/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Polygons/porta:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Polygons/frente:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Polygons/Handle2:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Polygons/Handle:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
resource_name = "abrindo"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Polygons/porta:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 7, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Polygons/frente:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1e-05, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Polygons/frente:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -112, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Polygons/Handle2:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -96, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Polygons/Handle:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Colision/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 40, 108 )

[node name="Door" type="Node2D"]
light_mask = 2
script = ExtResource( 1 )

[node name="Colision" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Colision"]
position = Vector2( -8, 0 )
shape = SubResource( 3 )

[node name="Polygons" type="Node2D" parent="."]

[node name="porta" type="Polygon2D" parent="Polygons"]
color = Color( 0.0588235, 0.0588235, 0.0588235, 1 )
polygon = PoolVector2Array( 0, -108, 0, 108, -16, 108, -16, -108 )

[node name="frente" type="Polygon2D" parent="Polygons"]
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( 0, -108, 0, 108, -16, 108, -16, -108 )

[node name="Handle2" type="Polygon2D" parent="Polygons"]
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( 0, 0, 0, -4, 4, -8, 8, -8, 12, -4, 12, 0, 8, 4, 4, 4 )

[node name="Handle" type="Polygon2D" parent="Polygons"]
position = Vector2( -28, 0 )
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( 0, 0, 0, -4, 4, -8, 8, -8, 12, -4, 12, 0, 8, 4, 4, 4 )

[node name="PlayerArea2D" type="Area2D" parent="."]
position = Vector2( -8, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerArea2D"]
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/RESET = SubResource( 7 )
anims/abrindo = SubResource( 2 )

[node name="OpenTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="EnemyArea2D" type="Area2D" parent="."]
position = Vector2( -8, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyArea2D"]
shape = SubResource( 8 )

[connection signal="body_entered" from="PlayerArea2D" to="." method="_on_PlayerArea2D_body_entered"]
[connection signal="body_exited" from="PlayerArea2D" to="." method="_on_PlayerArea2D_body_exited"]
[connection signal="timeout" from="OpenTimer" to="." method="_on_OpenTimer_timeout"]
[connection signal="body_entered" from="EnemyArea2D" to="." method="_on_EnemyArea2D_body_entered"]
